k8s/apps/multimedia/sonarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns01
    item.homer.rajsingh.info/name: "Sonarr"
    item.homer.rajsingh.info/subtitle: "TV shows collection management"
    item.homer.rajsingh.info/logo: "https://cdn.jsdelivr.net/npm/@loganmarchione/homelab-svg-assets@latest/assets/sonarr.svg"
    item.homer.rajsingh.info/tag: "local"
    item.homer.rajsingh.info/tagstyle: "is-success"
    item.homer.rajsingh.info/order: "20"
    service.homer.rajsingh.info/name: "Multimedia"
    service.homer.rajsingh.info/icon: "fa fa-tv"
    service.homer.rajsingh.info/order: "20"
  labels:
    homer.rajsingh.info/enabled: "true"
  name: sonarr
spec:
  ingressClassName: private
  rules:
    - host: sonarr.ankhmorpork.thaum.xyz
      http:
        paths:
          - backend:
              service:
                name: sonarr
                port:
                  number: 8989
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - sonarr.ankhmorpork.thaum.xyz
      secretName: sonarr-ankhmorpork-thaum-xyz-tls
